--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,15 @@ body {
     line-height: 34px;
     color: #777777;
     background: url("../images/background.png");
-  }
-  
-  * {
-    box-sizing: border-box;
 }
-  
+ 
 .container {
     width: 100%;
     max-width: 960px;
-    margin: 0 auto;
+    margin: 50 auto;
     clear: both;
     position: fixed;
+    background: white;
 }
   
 h1,
@@ -44,18 +41,7 @@ h2,
 h3 {
     font-size: 22px;
 }
-  
-#topheader {
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: #ffffff;
-    background: #ffffff;
-    border-bottom: 2px solid #cccccc;
-}
-  
+    
 #logo {
     float: left;
     width: 250px;
@@ -69,7 +55,21 @@ h3 {
     text-decoration: none;
     background: #4aaaa5;
 }
-  
+ 
+.navbar {
+    float: left;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    letter-spacing: 5px;
+  }
+  .navbar-nav  li a:hover {
+    color: #4aaaa5;
+}
+
 nav {
     float: right;
     margin-top: 25px;
@@ -196,16 +196,3 @@ input[type=submit] {
     background: #4aaaa5;
     border: 0 none;
 }
-
-.navbar {
-    float: left;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
-    color: #1abc9c !important;
